# advcalclib

./: CMakeLists.txt  Makefile  exam  example.cpp
Ada/: .advcalc.ads.swp  advcalc.ads  calc.adb  calc.gpr  getnames.sh  proj.adb
Formula/: advcalclib.rb
debian/: changelog  control  copyright  files  rules
include/: algebra.hpp  calc.hpp  calculus.hpp  commun.hpp  elec.hpp  geom.hpp  mesh.hpp  physics.hpp  stat.hpp  units.hpp  utils.hpp
src/: algebra.cpp  calc.cpp  calculus.cpp  commun.cpp  elec.cpp  geom.cpp  mesh.cpp  physics.cpp  stat.cpp  units.cpp  utils.cpp
